2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Fix notag handling.
	* src/ucommand.cc (UCommand_EXPR::execture_): Display the result
	when there is no tag, so that the top level displays the result.
	As a consequence, inner expressions still display something, I
	don't really know how to avoid this with a simple Q&D hack.
	* src/ucommand.hh, src/ucommand.hxx (tag_info_get): New.
	* src/uconnection.cc (UConnection::mkPrefix): Don't display notag
	tags.

2007-10-19  Guillaume Deslandes  <deslandes@gostai.com>

	Add .automerge_moves file.
	* .automerge_moves: New.
	The file only contains help for remembering.
	File list need to be appended.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Missing member init.
	* src/ucommand.cc (UCommand::UCommand): Initialize is_channel_.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	<< vs. :.
	* src/parser/bison/ugrammar.y (is_colon): Rename as...
	(is_channel): this.
	Use it in the <</: rule.
	* src/ucommand.hh, src/ucommand.cc (UCommand::is_channel_)
	(UCommand::is_channel_get, UCommand::is_channel_set): New.
	Use them where it seems appropriate.
	* src/ucommand.hxx: New.
	* src/Makefile.am: Adjust.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Support seq(n).
	* src/uexpression.cc (UExpression::eval_FUNCTION_1): Do it.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	loopn|foreach -> for.
	* src/parser/bison/ugrammar.y ("loopn", "foreach"): Remove,
	use "for" instead.
	* src/parser/bison/utoken.l (DEPRECATED): New.
	Use it for ^, foreach and loopn.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	<< for tags.
	This patch is a rough implementation of << for channels.
	It actually makes << and : both usable for both tags and
	channels.  If someone wants to improve this, go ahead.
	* src/parser/bison/ugrammar.y (<<, >>): New tokens.
	(YYSTYPE::is_colon, colon_or_ltlt): New.
	* src/parser/bison/utoken.l (<<, >>): New tokens.
	Fix the catch-all rule to be active for all the start conditions
	(fixes a Flex warning).
